# Lightningbeam

./: .gitignore  .gitmodules  ARCHITECTURE.md  BEAM_FILE_FORMAT.md  CONTRIBUTING.md  Changelog.md  README  README.md  README_INSTALL.txt  Roadmap  STREAMING_TO_DISK_PLAN.md  TODO.md  base.js  beam_inspector.py  beam_inspector_README.md  codeeditor.py  colors.py  control  create_release.sh  kt.py  lightningbeam  lightningbeam.desktop  lightningbeam.html  lightningbeam.icns  lightningbeam.kv  lightningbeam.py  lightningbeam_windows.py  misc_funcs.py  mkdebian  package.json  phone-ui-sketches.html  pnpm-lock.yaml  setup.py  svlgui.py  todo.txt
daw-backend/: Cargo.toml  darude-sandstorm.mid  daw_architecture_doc.md
daw-backend/examples/: midi_debug.rs  midi_end_debug.rs
daw-backend/src/: lib.rs  main.rs  tempo_map.rs  time.rs
daw-backend/src/audio/: automation.rs  bpm_detector.rs  buffer_pool.rs  clip.rs  disk_reader.rs  engine.rs  export.rs  metronome.rs  midi.rs  midi_pool.rs  mod.rs  pool.rs  project.rs  recording.rs  sample_loader.rs  track.rs  waveform_cache.rs  waveform_pyramid.rs
daw-backend/src/audio/node_graph/: graph.rs  lbins.rs  mod.rs  node_trait.rs  preset.rs  types.rs
daw-backend/src/command/: mod.rs  types.rs
daw-backend/src/dsp/: biquad.rs  mod.rs  svf.rs
daw-backend/src/effects/: effect_trait.rs  eq.rs  gain.rs  mod.rs  pan.rs  synth.rs
daw-backend/src/io/: audio_file.rs  midi_file.rs  midi_input.rs  mod.rs  wav_writer.rs
daw-backend/src/tui/: mod.rs
daw-backend/tests/: compressed_source_stream.rs  node_graph_test.rs  video_audio_stream.rs  waveform_pyramid.rs
docs/: AUDIO_SYSTEM.md  (+3 more)
ffmpeg-blob-io/: Cargo.toml
ffmpeg-blob-io/src/: lib.rs
ffmpeg-blob-io/tests/: blob_input.rs
lightningbeam-core/: Cargo.toml  build.sh
lightningbeam-core/src/: audio.rs  lib.rs  time.rs
lightningbeam-ui/: .gitignore  Cargo.toml  GPU_VIDEO_DECODE_PLAN.md  build-static.sh  build-windows.bat
lightningbeam-ui/beamdsp/: BEAMDSP.md  Cargo.toml
lightningbeam-ui/beamdsp/src/: ast.rs  codegen.rs  error.rs  lexer.rs  lib.rs  opcodes.rs  parser.rs  token.rs  ui_decl.rs  validator.rs  vm.rs
lightningbeam-ui/egui_node_graph2/: Cargo.toml
lightningbeam-ui/egui_node_graph2/src/: editor_ui.rs  graph_impls.rs  node_finder.rs  scale.rs  traits.rs  ui_state.rs
lightningbeam-ui/gpu-video-encoder/: Cargo.toml
lightningbeam-ui/gpu-video-encoder/src/: decoder.rs  dmabuf.rs  encoder.rs  lib.rs  nv12.rs  render_nv12.rs  vaapi.rs  vk_device.rs
lightningbeam-ui/gpu-video-encoder/tests/: decode_roundtrip.rs  drm_device.rs  gpu_nv12.rs  vaapi_encode.rs  zerocopy.rs  zerocopy_encode.rs
lightningbeam-ui/lightningbeam-core/: Cargo.toml
lightningbeam-ui/lightningbeam-core/assets/fonts/: README.txt
lightningbeam-ui/lightningbeam-core/src/: action.rs  animation.rs  asset_folder.rs  beam_archive.rs  beat_time.rs  bezier_vertex.rs  bezpath_editing.rs  brush_engine.rs  brush_settings.rs  clip.rs  clipboard.rs  clipboard_platform.rs  curve_intersection.rs  curve_intersections.rs  curve_segment.rs  dcel.rs  document.rs  effect.rs  effect_layer.rs  effect_registry.rs  export.rs  file_io.rs  file_types.rs  flood_fill.rs  fonts.rs  gap_handling.rs  gradient.rs  hit_test.rs  instance_group.rs  intersection_graph.rs  layer.rs  layer_tree.rs  layout.rs  lib.rs  object.rs  pane.rs  path_fitting.rs  path_interpolation.rs  planar_graph.rs  quadtree.rs  (+18 more)
lightningbeam-ui/lightningbeam-core/src/actions/: add_clip_instance.rs  add_effect.rs  add_layer.rs  add_raster_keyframe.rs  add_shape.rs  append_takes.rs  change_bpm.rs  change_fps.rs  clip_from_geometry.rs  convert_to_movie_clip.rs  create_folder.rs  create_text_clip.rs  delete_folder.rs  group_layers.rs  group_shapes.rs  loop_clip_instances.rs  manage_takes.rs  mod.rs  modify_shape_path.rs  move_asset_to_folder.rs  move_clip_instances.rs  move_layer.rs  move_objects.rs  paint_bucket.rs  raster_diff.rs  raster_fill.rs  raster_stroke.rs  region_split.rs  remove_clip_instances.rs  remove_effect.rs  remove_shapes.rs  rename_folder.rs  reorder_clip_instances.rs  resize_raster_layer.rs  resize_text_box.rs  set_active_take.rs  set_cycle_region.rs  set_document_properties.rs  set_fill_paint.rs  set_image_fill.rs  (+13 more)
lightningbeam-ui/lightningbeam-core/src/dcel2/: import.rs  mod.rs  query.rs  region.rs  stroke.rs  topology.rs
lightningbeam-ui/lightningbeam-core/src/gpu/: buffer_pool.rs  color_convert.rs  compositor.rs  effect_processor.rs  mod.rs  yuv_converter.rs
lightningbeam-ui/lightningbeam-core/tests/: beam_archive.rs  clip_workflow_test.rs  layer_properties_test.rs  packed_video_stream.rs  region_select_debug.rs  region_select_test.rs  rendering_integration_test.rs  selection_integration_test.rs
lightningbeam-ui/lightningbeam-editor/: Cargo.toml  PLAN.md  TOOL_IMPLEMENTATION_PLAN.md  build.rs
lightningbeam-ui/lightningbeam-editor/assets/: com.lightningbeam.editor.appdata.xml  com.lightningbeam.editor.desktop  layouts.json  styles.css
lightningbeam-ui/lightningbeam-editor/examples/: ffmpeg_test.rs  transcode_x264_test.rs  video_export_test.rs
lightningbeam-ui/lightningbeam-editor/src/: config.rs  cqt_gpu.rs  curve_editor.rs  custom_cursor.rs  debug_overlay.rs  default_instrument.rs  effect_thumbnails.rs  gpu_brush.rs  gpu_timer.rs  hw_video.rs  keymap.rs  main.rs  main.rs.backup  menu.rs  notifications.rs  nv12_blit.rs  raster_tool.rs  sample_import.rs  sample_import_dialog.rs  spectrogram_compute.rs  spectrogram_gpu.rs  svg_import.rs  tablet.rs  test_mode.rs  theme.rs  theme_render.rs  waveform_gpu.rs  waveform_image_cache.rs
nam-ffi/cmake/: CMakeLists.txt
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/assets/factory_presets/: Basic_Sine.json  Pluck.json  Poly_Synth.json  Sawtooth_Bass.json  Warm_Pad.json
src-tauri/capabilities/: default.json
src-tauri/examples/: video_inspect.rs
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  frame_streamer.rs  frame_ws_async.rs  lib.rs  main.rs  render_window.rs  renderer.rs  video.rs  video_server.rs
src-tauri/src/shaders/: gradient.wgsl
(+507 files in other folders)
