[package]
name = "lightningbeam-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = "0.2.45"
cpal = { version = "0.15", features = ["wasm-bindgen"] }
anyhow = "1.0"
wasm-logger = "0.2"
log = "0.4"
rubato = "0.14.0"
symphonia = { version = "0.5", features = ["all"] }

[dependencies.web-sys]
version = "0.3.22"
features = ["console", "AudioContext"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
minimp3 = "0.5.1" # Only include minimp3 for native platforms
hound = "3.5.1"   # Only include hound for native platforms

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so it's only enabled
# in debug mode.
[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.5"

[features]
default = ["native"]
native = []
wasm = []
