[workspace]
resolver = "2"
members = [
    "lightningbeam-editor",
    "lightningbeam-core",
]

[workspace.dependencies]
# UI Framework (using eframe for simplified integration)
# Note: Upgraded from 0.29 to 0.31 to fix Linux IME/keyboard input issues
# See: https://github.com/emilk/egui/pull/5198
eframe = { version = "0.31", default-features = true, features = ["wgpu"] }
egui_extras = { version = "0.31", features = ["image", "svg"] }
egui-wgpu = "0.31"

# GPU Rendering
# vello 0.5 uses wgpu 24, matching eframe 0.31
vello = "0.5"
wgpu = "24"
kurbo = { version = "0.11", features = ["serde"] }
peniko = "0.5"

# Windowing
winit = "0.30"

# Native menus
muda = "0.15"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Image loading
image = "0.25"
resvg = "0.42"

# Utilities
pollster = "0.3"
