[workspace]
resolver = "2"
members = [
    "lightningbeam-editor",
    "lightningbeam-core",
]

[workspace.dependencies]
# UI Framework (using eframe for simplified integration)
# Note: Upgraded from 0.29 to 0.31 to fix Linux IME/keyboard input issues
# See: https://github.com/emilk/egui/pull/5198
# Upgraded to 0.33 for shader editor (egui_code_editor) and continued bug fixes
egui = "0.33.3"
eframe = { version = "0.33.3", default-features = true, features = ["wgpu"] }
egui_extras = { version = "0.33.3", features = ["image", "svg", "syntect"] }
egui-wgpu = "0.33.3"
egui_code_editor = "0.2"

# GPU Rendering
# vello from git uses wgpu 27, matching eframe 0.33
vello = { git = "https://github.com/linebender/vello", branch = "main" }
wgpu = { version = "27", features = ["vulkan", "metal"] }
kurbo = { version = "0.12", features = ["serde"] }
peniko = "0.5"

# Windowing
winit = "0.30"

# Native menus
muda = "0.15"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Image loading
image = "0.25"
resvg = "0.42"

# Utilities
pollster = "0.3"

# Desktop notifications
notify-rust = "4.11"
