[package]
name = "lightningbeam-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }

# UI framework (for Color32 conversion)
egui = "0.31"

# Geometry and rendering
kurbo = { workspace = true }
vello = { workspace = true }

# Image decoding for image fills
image = { workspace = true }

# Unique identifiers
uuid = { version = "1.0", features = ["v4", "serde"] }

# Audio backend
daw-backend = { path = "../../daw-backend" }

# File I/O
zip = "0.6"
chrono = "0.4"
base64 = "0.21"
pathdiff = "0.2"

# Audio encoding for embedded files
flacenc = "0.4" # For FLAC encoding (lossless)
claxon = "0.4" # For FLAC decoding
