[package]
name = "lightningbeam-editor"
version = "0.1.0"
edition = "2021"

[dependencies]
lightningbeam-core = { path = "../lightningbeam-core" }
daw-backend = { path = "../../daw-backend" }
rtrb = "0.3"
cpal = "0.15"
ffmpeg-next = { version = "8.0", features = ["static"] }

# UI Framework
eframe = { workspace = true }
egui_extras = { workspace = true }
egui-wgpu = { workspace = true }
egui_code_editor = { workspace = true }
egui_node_graph2 = { path = "../egui_node_graph2" }

# GPU
wgpu = { workspace = true }
vello = { workspace = true }
half = { version = "2.4", features = ["bytemuck"] }
bytemuck = { version = "1.14", features = ["derive"] }
kurbo = { workspace = true }
peniko = { workspace = true }

# Windowing
winit = { workspace = true }

# Native menus
muda = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Image loading
image = { workspace = true }
resvg = { workspace = true }
tiny-skia = "0.11"

# Utilities
pollster = { workspace = true }
lightningcss = "1.0.0-alpha.68"
clap = { version = "4.5", features = ["derive"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
petgraph = "0.6"
rayon = "1.10"

# Native file dialogs
rfd = "0.15"

# Cross-platform config paths
directories = "5.0"

# Desktop notifications
notify-rust = { workspace = true }

# Debug overlay - memory tracking
memory-stats = "1.1"
